; ModuleID = '/home/carl/AnghaBench/linux/security/extr_security.c_security_file_free.c'
source_filename = "/home/carl/AnghaBench/linux/security/extr_security.c_security_file_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32* }

@file_free_security = common dso_local global i32 0, align 4
@lsm_file_cache = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @security_file_free(%struct.file* %0) #0 {
  %2 = alloca %struct.file*, align 8
  %3 = alloca i8*, align 8
  store %struct.file* %0, %struct.file** %2, align 8
  %4 = load i32, i32* @file_free_security, align 4
  %5 = load %struct.file*, %struct.file** %2, align 8
  %6 = call i32 @call_void_hook(i32 %4, %struct.file* %5)
  %7 = load %struct.file*, %struct.file** %2, align 8
  %8 = getelementptr inbounds %struct.file, %struct.file* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = bitcast i32* %9 to i8*
  store i8* %10, i8** %3, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %19

13:                                               ; preds = %1
  %14 = load %struct.file*, %struct.file** %2, align 8
  %15 = getelementptr inbounds %struct.file, %struct.file* %14, i32 0, i32 0
  store i32* null, i32** %15, align 8
  %16 = load i32, i32* @lsm_file_cache, align 4
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @kmem_cache_free(i32 %16, i8* %17)
  br label %19

19:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @call_void_hook(i32, %struct.file*) #1

declare dso_local i32 @kmem_cache_free(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
